--- a/final/views/partials/head.ejs
+++ b/final/views/partials/head.ejs
@@ -15,6 +15,8 @@
     <!-- JavaScript -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
     <script src="/js/vendor/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-doubletapdrag"></script>
+    <script src="https://unpkg.com/leaflet-doubletapdragzoom"></script>
     <script src="/js/vendor/polyline.js"></script>
     <script type="module" src="/js/map.js"></script>
     <script type="module" src="/js/timetable.js"></script>
