--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <%- include("../partials/head") %>
+    <script src="/js/disableMagnifier.js"></script>
 </head>
 <body class="index-page">
     <header>
