--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -137,14 +137,22 @@ aside {
     max-height: 40vh;
     overflow-y: auto;
 }
+
 .bus-time-record {
-    padding: 10px;
+    padding: 10px !important;
     border-bottom: 1px solid #ddd;
+    cursor: pointer;
 }
+
+.bus-time-record:hover {
+    background-color: #e9ecef;
+}
+
 .search-container button {
     background: #ddd;
     border: none;
 }
+
 .search-container button:hover {
     background: #ccc;
 }
