--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -9,6 +9,11 @@
 
 /* =-=-=-= MAIN =-=-=-= */
 
+/* Index Page CSS */
+.index-page {
+    overflow: hidden;
+}
+
 body {
     font-family: "Poppins", sans-serif;
     overflow-x: hidden;
