--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -340,6 +340,20 @@ button.btn-link.number:hover {
     border-left: 4px solid #5bc0de;
 }
 
+/* =-=-=-= 404 PAGE =-=-=-= */
+#container-404 {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+#logo-404 {
+    width: 180px;
+    margin-bottom: 2rem;
+}
 
 /* =-=-=-= RESPONSIVE PHONES =-=-=-= */
 @media (max-width: 652px) {
