--- a/final/views/pages/404.ejs
+++ b/final/views/pages/404.ejs
@@ -7,17 +7,14 @@
 </head>
 <body>
     <main class="container-fluid">
-        <div class="container">
-            <!-- Logo -->
-            <img src="images/logo.png" alt="Logo" class="logo">
-            
+        <div id="container-404" class="container">
+            <img id="logo-404" src="images/logo.png" alt="Logo" class="logo">
             <h1 class="display-4">Oops! Page Not Found.</h1>
             <p class="lead">The page you're looking for doesn't exist.</p>
-        
-            <!-- Button to go back to the home page -->
             <a href="/" class="btn btn-primary btn-home">Home</a>
         </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
+
