--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -155,7 +155,7 @@ aside {
     cursor: pointer;
 }
 
-.bus-time-record:hover {
+.bus-time-record.active:hover {
     background-color: #e9ecef;
 }
 
