--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -453,11 +453,13 @@ button.btn-link.number:hover {
         right: 0;
         z-index: 10;
         width: 100%;
-        height: 200px;
-        min-height: 120px;
+        height: 200px; 
+        min-height: 35px;
         max-height: 80vh;
         transition: height 0.2s ease;
         box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+        border-top-left-radius: 8px;
+        border-top-right-radius: 8px;
     }
 
     #bus-data {
@@ -470,27 +472,31 @@ button.btn-link.number:hover {
         direction: ltr;
     }
 
+    .search-container {
+        padding-top: 10px;
+    }
+
     aside.col-md-3::before {
         content: "";
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
-        height: 12px;
-        background-color: #5a5a5a;
+        height: 14.5px;
+        background-color: #838383;
         border-top-left-radius: 8px;
         border-top-right-radius: 8px;
         cursor: ns-resize;
     }
 
     aside.col-md-3::after {
-        content: "≡";
+        content: "=";
         position: absolute;
         top: 0;
         left: 50%;
         transform: translateX(-50%);
         color: white;
-        font-size: 16px;
+        font-size: 12px;
         pointer-events: none;
     }
 
