--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -54,7 +54,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 10vh;
+    height: 100px;
     box-shadow: 1px 1px 2px 1px rgba(94, 93, 93, 0.8);
     padding: 0 10px;
 }
