--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -19,9 +19,9 @@
                     <li class="nav-item">
                         <a class="nav-link <%= page === 'map' ? 'active' : '' %>" href="/">Map</a>
                     </li>
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link <%= page === 'timetable' ? 'active' : '' %>" href="/timetable">Timetables</a>
-                    </li>
+                    </li>-->
                     <li onclick="alert('This feature is coming soon! Edited')" class="nav-item">
                         <a class="nav-link <%= page === 'plantrip' ? 'active' : '' %>" href="#">Plan Trip</a>
                     </li>
