--- a/final/views/partials/head.ejs
+++ b/final/views/partials/head.ejs
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Wruczek/Bootstrap-Cookie-Alert@gh-pages/cookiealert.css">
 
     <!-- JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> 
+    <script src="/js/vendor/jquery-3.6.0.min.js"></script> 
     <script src="/js/vendor/leaflet.js"></script>
     <script src="/js/vendor/leaflet-doubletapdrag.js"></script>
     <script src="/js/vendor/leaflet-doubletapdragzoom.js"></script>
