--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -81,7 +81,7 @@
                                             %>
                                         </p>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Log Out Now</button>
+                                    <button type="submit" class="btn btn-primary mt-2">Log Out Now</button>
                                 </form>
                             </div>
                         </div>
@@ -100,16 +100,16 @@
                             <div id="passwordForm" class="mt-3" style="display: none;">
                                 <form method="POST" action="/settings/changepassword">
                                     <div class="form-group">
-                                        <label for="oldpass">Enter Old Password</label>
-                                        <input type="password" id="oldpass" class="form-control" placeholder="Enter your old password" name="oldpassword" />
+                                        <label class="mt-2" for="oldpass">Enter Old Password</label>
+                                        <input type="password" id="oldpass" class="form-control mt-2" placeholder="Enter your old password" name="oldpassword" />
                                         
-                                        <label for="newpassword">New Password</label>
-                                        <input type="password" id="newpassword" class="form-control" placeholder="Enter new password" name="newpassword" />
+                                        <label class="mt-2" for="newpassword">New Password</label>
+                                        <input type="password" id="newpassword" class="form-control mt-2" placeholder="Enter new password" name="newpassword" />
                                         
-                                        <label for="confirmpass">Confirm New Password</label>
-                                        <input type="password" id="confirmpass" class="form-control" placeholder="Confirm new password" name="confirmpassword"/>
+                                        <label class="mt-2" for="confirmpass">Confirm New Password</label>
+                                        <input type="password" id="confirmpass" class="form-control mt-2" placeholder="Confirm new password" name="confirmpassword"/>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Save</button>
+                                    <button type="submit" class="btn btn-primary mt-2">Save</button>
                                 </form>
                             </div>
                         </div>
@@ -128,10 +128,10 @@
                             <div id="deleteAccountForm" class="mt-3" style="display: none;">
                                 <form method="POST" action="/settings/deleteaccount">
                                     <div class="form-group">
-                                        <label for="confirmDelete">Type "DELETE" to confirm</label>
-                                        <input type="text" id="confirmDelete" class="form-control" placeholder="DELETE" name="deletetext" />
+                                        <label for="confirmDelete">Type "delete" to confirm</label>
+                                        <input type="text" id="confirmDelete" class="form-control mt-2" placeholder="delete" name="deletetext" />
                                     </div>
-                                    <button type="submit" class="btn btn-danger">Delete Account</button>
+                                    <button type="submit" class="btn btn-danger mt-2">Delete Account</button>
                                 </form>
                             </div>
                         </div>
