--- a/final/views/pages/create.ejs
+++ b/final/views/pages/create.ejs
@@ -14,8 +14,8 @@
             <div id="login-section">
                 <h1>Create Account</h1>
                 <form action="/create/createUser" method="POST">
-                    <input type="text" placeholder="Title" name="title" required><br>
                     <input type="text" placeholder="First Name" name="first" required><br>
+                    <input type="text" placeholder="Last Name" name="last" required><br>
 
                     <input type="email" placeholder="Email" name="email" required><br>
                     <input type="password" placeholder="Password" name="password" required><br>
