--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -70,7 +70,7 @@
                                         <h3>Current Details</h3>
                                         <p>Name: 
                                             <%= loggedIn && user 
-                                                ? `${user.name.title} ${user.name.first}` 
+                                                ? `${user.name.first} ${user.name.last}` 
                                                 : "Not logged in" 
                                             %>
                                         </p>
