--- a/final/views/pages/404.ejs
+++ b/final/views/pages/404.ejs
@@ -8,7 +8,8 @@
 <body>
     <main class="container-fluid">
         <div id="container-404" class="container">
-            <img id="logo-404" src="images/logo.png" alt="Logo" class="logo">
+            <p>Image path: <%= image %> </p>
+            <img id="logo-404" src="<%= image %>" alt="Logo" class="logo">
             <h1 class="display-4">Oops! Page Not Found.</h1>
             <p class="lead">The page you're looking for doesn't exist.</p>
             <a href="/" class="btn btn-primary btn-home">Home</a>
@@ -18,3 +19,4 @@
 </html>
 
 
+ 
