--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -45,13 +45,13 @@
                             </div>                            
                         </div>
                         <div class="list-group-item">
-                            <div class="row align-items-center">
-                                <div class="col">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
                                     <strong class="mb-0">Distance Units</strong>
                                     <p class="text-muted mb-0">Please select prefered units of Distance</p>
                                 </div>
-                                <div class="col-auto">
-                                    <div class="col-auto">
+                                <div id="UnitsForm" class="mt-3" style="display: none;">
+                                    <div class="form-group mb-3">
                                         <select id="distanceUnits" class="form-select">
                                             <option value="km">Kilometers</option>
                                             <option value="miles">Miles</option>
